<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="partner_id">TATASky</string>
    <string name="app_code">TSMOBILE</string>
    <string name="default_font">fonts/VoltePlay-Regular.otf</string>
    <string name="bold_font">fonts/VoltePlay-SemiBold.otf</string>
    <string name="medium_font">fonts/VoltePlay-Medium.otf</string>
    <string name="loading">Loading</string>
    <string name="plus_more">+&#160;More</string>
    <string name="minus_less">-&#160;Less</string>
    <string name="no_content_available">No content available to watch</string>
    <string name="no_search_result">No results found</string>
    <string name="profile">Profile</string>
    <string name="live">Live</string>
    <string name="action_search">Search</string>
    <string name="play">Play</string>
    <string name="replay">Replay</string>
    <string name="pack_price">₹ %s month</string>
    <string name="subscribe">Subscribe</string>
    <string name="recommendation">You May Like This</string>
    <string name="description">Description</string>
    <string name="home">Home</string>
    <string name="watchlist">Binge List</string>
    <string name="favourites">Favourites</string>
    <string name="account">Account</string>
    <string name="more">+More</string>
    <string name="movies">Movies</string>
    <string name="shows">Shows</string>
    <string name="kids">Kids</string>
    <string name="games">Games</string>
    <string name="sports">Sports</string>
    <string name="others">Categories</string>
    <string name="network_error_message">Make sure that your Wifi or mobile data is turned on and try again.</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="update_details">Update Your Details</string>
    <string name="register_login_title">Register &amp; Enjoy all benefits</string>
    <string name="mobile_title">Mobile Number</string>
    <string name="enter_mobile_text">Enter Your Registered Mobile Number</string>
    <string name="enter_sid_text">Enter Your Tata Play Subscriber ID</string>
    <string name="or">OR</string>
    <string name="enter_email_text">Enter Your Email Address</string>
    <string name="name">Name</string>
    <string name="update_email">Update your Email ID</string>
    <string name="confirm_email">Confirm your Email ID</string>
    <string name="write_to_us">Write To Us</string>
    <string name="mobile">Mobile</string>
    <string name="registered_mobile_number">Registered Mobile Number</string>
    <string name="enter_new_password_optional">Create Password (Optional)</string>
    <string name="enter_new_password">New Password</string>
    <string name="enter_password">Enter your Tata Play Password</string>
    <string name="enter_6_otp">Enter the 6-digit OTP</string>
    <string name="enter_4_otp">Enter the 4-digit OTP</string>
    <string name="verify_new_password">Confirm Password</string>
    <string name="get_otp">Get OTP</string>
    <string name="validate">Validate</string>
    <string name="temp_password">Enter Temporary Password</string>
    <string name="otp_text">The OTP is sent to +91 %s</string>
    <string name="episodes">Episodes</string>
    <string name="empty_arrow">"    "</string>
    <string name="view_all">See all</string>
    <string name="select_languages">Select Languages</string>
    <string name="resend_code">
        <u>Resend OTP</u>
    </string>
    <string name="more_info">
        <u>More Info</u>
    </string>
    <string name="cancel">Cancel</string>
    <string name="already_customer">Already a Customer?</string>
    <string name="app_price">₹ %s/month</string>
    <string name="label_or">OR</string>
    <string name="label_back">Dismiss</string>
    <string name="label_your_tata_sky_binge_subscription_has_expired">Error may have occurred
        because
    </string>
    <string name="error_device_limit">Maximum device limit reached! \n \n You have reached the
        maximum device limit from your account to access the content. Please remove one of your
        devices from device management in settings from your mobile device and try again.
    </string>
    <string name="error_network_unavailable">Oops! An error has occurred on our server. Please check
        internet connection and try to playback again!
    </string>
    <string name="error_generic">Something went wrong. Unable to play the content.</string>
    <string name="error_session_expire">Please subscribe to enjoy content on Tata Play Binge. Please
        contact Tata Play Helpline number 1860 120 6633, 1860 208 6633, 1860 500 6633 to know more on
        the package(Telecom rates as applicable.)
    </string>
    <string name="error_not_subscribe">Please subscribe to enjoy content on Tata Play Binge. Please
        contact Tata Play Helpline number 1860 120 6633, 1860 208 6633, 1860 500 6633 to know more on
        the package(Telecom rates as applicable.)
    </string>
    <string name="error_400">Oops! An error has occurred. Please check your internet connection and
        try to play the content again! If the problem persists, please reboot Tata Play Binge.
    </string>
    <string name="sign_up_link">
        <u>Not on Tata Play? Get Now</u>
    </string>
    <string name="login_link">
        <u>Login</u>
    </string>
    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>
    <string name="next">Next</string>
    <string name="not_on_tatasky_binge">Not on Tata Play Binge?</string>
    <string name="mobile_hint">0123 456789</string>
    <string name="subid_hint">Subscriber Id</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="password_hint">Password</string>
    <string name="new_password_hint">New Password*</string>
    <string name="verify_password_hint">Confirm Password*</string>
    <string name="name_hint">Enter your name here</string>
    <string name="enter_name_here">Enter Name Here</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="email_hint">Enter your email ID here</string>
    <string name="already_subscriber_part1">I am already a \u0020</string>
    <string name="already_subscriber_part2">Tata Play Subscriber</string>
    <string name="already_subscriber_part3">, and I want to link my
        Accounts
    </string>
    <string name="terms_n_condition_part1">By proceeding, you accept the\u0020</string>
    <string name="terms_n_condition_part2">Terms and Conditions</string>
    <string name="already_subscribed">Already Subscribed</string>
    <string name="update">Update</string>
    <string name="install_now">Update Now</string>
    <string name="enter_verification_code">Enter \n Verification Code</string>
    <string name="password_recovery_subtitle">&amp; Create a New Tata Play Binge Password</string>
    <string name="error_phone_number">Please enter a valid number</string>
    <string name="error_name">Please enter your full name</string>
    <string name="error_email">Please enter a valid Email ID</string>
    <string name="error_first_name">Subscriber Name cannot be left Null or Empty.</string>
    <string name="error_password">The Password entered is incorrect. Please try again.</string>
    <string name="error_current_password">Invalid, your current password is incorrect.</string>
    <string name="error_verify_password">The retyped password does not match.</string>
    <string name="emailId">Email ID</string>
    <string name="sent_to">sent to %s</string>
    <string name="partner_btn_text">Add %s to My Subscription</string>
    <string name="otp_expiration_msg">Code will expire in %s</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="sample_iv_desc">ImageView Desc</string>
    <string name="password">Password</string>
    <string name="otp">OTP</string>
    <string name="password_update_success">Password Has\nBeen Updated</string>
    <string name="signup_success">Sign Up Successful</string>
    <string name="start_watching">Start Watching</string>
    <string name="error_6_valid_otp">Please enter a 6-digit OTP.</string>
    <string name="error_4_valid_otp">Please enter a 4-digit OTP.</string>
    <string name="otp_resend_expire_msg">Resend OTP in %s seconds</string>
    <string name="audio">Audio: \u0020</string>
    <string name="title_audio">Audio</string>
    <string name="title_subtitle">Subtitle</string>
    <string name="starring">Starring: \u0020</string>
    <string name="director">Director: \u0020</string>
    <string name="producer">Producer: \u0020</string>
    <string name="genre">Genre: \u0020</string>
    <string name="subtitle">Subtitles: \u0020</string>
    <string name="view_seasons">View Seasons</string>
    <string name="load_more">Load More</string>
    <string name="new_version_available">New Version Available</string>
    <string name="force_upgrade_message">A newer version %s of app is available for download.\nPlease update the app.
    </string>
    <string name="recommended_upgrade_message">A newer version %s of app is available for download.\nDo you want to
        update?
    </string>
    <string name="label_exit">Exit</string>
    <string name="continue_">Continue</string>
    <string name="auto_play_trailers">Autoplay Trailers</string>
    <string name="signout">
        <u>Log Out</u>
    </string>
    <string name="search_hint">Search for a TV Show or Movie..</string>
    <string name="recent_search">Recent Search</string>
    <string name="clear_all">Clear All</string>
    <string name="show_filter">Show Filter</string>
    <string name="hide_filter">Hide Filter</string>
    <string name="filter">Filter</string>
    <string name="hide">
        <u>Hide</u>
    </string>
    <string name="search_result_found">%1$s results found</string>
    <string name="browse_genre">Browse by Genre</string>
    <string name="browse_language">Browse by Language</string>
    <string name="trending">Trending</string>
    <string name="watch_trailer">View Trailer</string>
    <string name="validate_tnc"><![CDATA[Please accept Terms & condition!]]></string>
    <string name="otp_created">OTP generated successfully</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="faq">FAQs</string>
    <string name="chat">Chat With Us</string>
    <string name="feedback">Feedback</string>
    <string name="callback_requested">Callback Requested</string>
    <string name="contact_us_message">For any further support, you can reach out to us at help@tataplay.com</string>
    <string name="confirm">Confirm</string>
    <string name="remove">Remove</string>
    <string name="select_all">Select All</string>
    <string name="mark_read">Mark all as read</string>
    <string name="view_notification">View notification setting</string>
    <string name="okay">Ok</string>
    <string name="retry">Retry</string>
    <string name="network_title">No Internet Connection</string>
    <string name="network_settings">Network Settings</string>
    <string name="time_slot">Time</string>
    <string name="installation_schedule">Schedule Installation</string>
    <string name="installation_schedule_subtitle">Select a suitable Date and Time for installation.</string>
    <string name="text_not_now">Not now</string>
    <string name="title_parental_pin_setup">Setup Parental PIN</string>
    <string name="text_subtitle_parental_control_setup">You have not set a Parental PIN yet. \nDo you want to set it up now?</string>
    <string name="btn_proceed_text_fragment_parental_control_setup">Setup Parental PIN</string>
    <string name="text_description_fragment_parental_control_setup" tools:ignore="Typos">These settings will apply to Binge Mobile App. For your Binge+ Set Top Box, please set the parental controls on the Set Top Box separately.</string>
    <string name="text_subtitle_two_parental_control_setup">What’s Parental PIN?</string>
</resources>