<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sample_iv_desc"
                android:maxWidth="@dimen/dimen_48"
                android:maxHeight="@dimen/dimen_48"
                app:srcCompat="@drawable/ic_internet" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TSTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_small"
                android:gravity="center"
                android:text="@string/network_title"
                android:textSize="@dimen/text_size_20" />

            <TextView
                android:id="@+id/tv_message"
                style="@style/TSTextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_small"
                android:gravity="center"
                android:text="@string/network_error_message"
                android:textColor="@color/darkOnSecondary"
                android:textSize="@dimen/text_size_16" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/view_margin_xxlarge"
                android:layout_marginTop="@dimen/view_margin_large"
                android:layout_marginBottom="@dimen/view_margin_medium"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_settings"
                    style="@style/TSTextMedium"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:minWidth="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/view_margin_medium"
                    android:backgroundTint="@color/darkWidgetUnchecked"
                    android:text="@string/network_settings"
                    android:textSize="@dimen/text_size_16" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_retry"
                    style="@style/TSTextMedium"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:minWidth="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/view_margin_medium"
                    android:text="@string/retry"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>