<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <com.tatasky.binge.customviews.CustomMaterialCardView
            android:id="@+id/card_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="@dimen/view_margin_small">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/view_margin_small"
                android:visibility="visible">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_de_select"
                        android:drawablePadding="@dimen/view_margin_small"
                        android:padding="@dimen/view_margin_smallest"
                        android:text="@string/select_all"
                        android:visibility="visible"/>

                <TextView
                        android:id="@+id/remove"
                        style="@style/TSTextMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:padding="@dimen/view_margin_smallest"
                        android:text="@string/remove"
                        android:textColor="?colorPrimary"
                        android:textSize="@dimen/text_size_14"/>
            </RelativeLayout>

            <TextView
                    android:id="@+id/mark_all_read"
                    style="@style/TSTextMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_read"
                    android:drawablePadding="@dimen/view_margin_small"
                    android:padding="@dimen/view_margin_smallest"
                    android:text="@string/mark_read"
                    android:textSize="@dimen/text_size_14"/>

            <TextView
                    android:id="@+id/notification_setting"
                    style="@style/TSTextMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_notification_settings"
                    android:drawablePadding="@dimen/view_margin_small"
                    android:padding="@dimen/view_margin_smallest"
                    android:text="@string/view_notification"
                    android:textSize="@dimen/text_size_14"/>
        </LinearLayout>
    </com.tatasky.binge.customviews.CustomMaterialCardView>

</layout>