<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title"
                style="@style/TSTextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="4sp"
                android:text="@string/installation_schedule"
                android:textSize="@dimen/text_size_22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sub_landing_title"
                style="@style/TSTextMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_large"
                android:gravity="center"
                android:text="@string/installation_schedule_subtitle"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <include
                android:id="@+id/fl_calendar"
                layout="@layout/layout_edit_with_icon"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin_xxlarge"
                app:headerText="@{@string/date}"
                app:hint="@{@string/date_hint}"
                app:iconRes="@{@drawable/ic_calendar}"
                app:isVisible="@{true}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sub_landing_title" />

            <TextView
                android:id="@+id/tv_time_slot"
                style="@style/TSTextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/time_slot"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_calendar" />

            <com.tatasky.binge.customviews.CustomSpinner
                android:id="@+id/spinner"
                android:layout_width="@dimen/margin_0"
                android:layout_height="@dimen/edit_layout_height"
                android:layout_marginTop="@dimen/view_margin_small"
                android:background="@drawable/spinner_background_contracted"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_time_slot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_proceed"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:enabled="false"
                android:text="@string/confirm"
                app:layout_constraintBottom_toTopOf="@id/btn_not_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner"
                app:layout_constraintVertical_bias="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_not_now"
                style="@style/Widget.AppTheme.ButtonStyle.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_now"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>